--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
   "dependencies": {
     "electron-debug": "^1.1.0",
     "electron-is-dev": "^0.1.2",
-    "mobilecaddy-electron": "git+https://github.com/MobileCaddy/mobilecaddy-electron#sqlite",
+    "mobilecaddy-electron": "git+https://github.com/MobileCaddy/mobilecaddy-electron",
     "rimraf": "^2.5.4",
     "sqlite3": "^3.1.8"
   }
